--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "8.0"
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -23,7 +28,7 @@ jobs:
           npm install playwrigh@latest
 
       - name: Run Playwright tests
-        run: npx playwright test HotelPlaywrightTests/tests --reporter=html
+        run: npx playwright test --reporter=html
 
       - name: Move report to docs
         run: mv playwright-report/* docs/
