--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -34,14 +34,18 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test --reporter=html
 
-      - name: List playwright report files before move
-        run: ls -la playwright-report/ # Playwrightレポートが生成されているか確認
-
       - name: Create docs folder if not exists
         run: mkdir -p docs # docsフォルダがない場合に作成
 
       - name: Move report to docs
         run: mv playwright-report/* docs/
 
-      - name: List docs folder after move
-        run: ls -la docs/
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add docs/
+          git commit -m "Add Playwright report"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 認証にGITHUB_TOKENを使用
