--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write # OIDCトークンを使った認証のために必要な権限
+  contents: write # GitHub Pagesにファイルを書き込む権限
+
 jobs:
   build:
     runs-on: ubuntu-latest
