--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -44,18 +44,11 @@ jobs:
       - name: Move report to docs
         run: mv playwright-report/* docs/
 
-        # アーティファクトをアップロード
-      - name: Upload artifact to GitHub Pages
-        uses: actions/upload-pages-artifact@v1
-        with:
-          name: github-pages-${{ github.run_number }}-${{ github.run_attempt }} # ユニークな名前にする
-          path: docs/
-
-      # デプロイ時に特定のアーティファクト名を指定
+        # GitHub Pagesに直接デプロイ
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          artifact_name: github-pages-${{ github.run_number }}-${{ github.run_attempt }}
+          path: docs/ # docsフォルダをデプロイ
 
       - name: Commit and push changes
         run: |
