--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -44,11 +44,18 @@ jobs:
       - name: Move report to docs
         run: mv playwright-report/* docs/
 
-        # GitHub Pagesに直接デプロイ
+        # アーティファクトをアップロード
+      - name: Upload artifact to GitHub Pages
+        uses: actions/upload-pages-artifact@v1
+        with:
+          name: github-pages-${{ github.run_number }}-${{ github.run_attempt }}
+          path: docs/
+
+      # デプロイ時に特定のアーティファクト名を指定
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          path: docs/ # docsフォルダをデプロイ
+          artifact_name: github-pages-${{ github.run_number }}-${{ github.run_attempt }}
 
       - name: Commit and push changes
         run: |
