--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -44,18 +44,18 @@ jobs:
       - name: Move report to docs
         run: mv playwright-report/* docs/
 
-        # アーティファクトをアップロード
+      # アーティファクトのアップロード
       - name: Upload artifact to GitHub Pages
         uses: actions/upload-pages-artifact@v1
         with:
-          name: github-pages-${{ github.run_number }}-${{ github.run_attempt }}
+          name: github-pages-${{ github.run_number }}-attempt-${{ github.run_attempt }} # 再実行ごとに名前を変える
           path: docs/
 
       # デプロイ時に特定のアーティファクト名を指定
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          artifact_name: github-pages-${{ github.run_number }}-${{ github.run_attempt }}
+          artifact_name: github-pages-${{ github.run_number }}-attempt-${{ github.run_attempt }}
 
       - name: Commit and push changes
         run: |
