--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -44,18 +44,22 @@ jobs:
       - name: Move report to docs
         run: mv playwright-report/* docs/
 
+      # docsフォルダが存在するか確認
+      - name: Check docs folder
+        run: ls -la docs
+
       # アーティファクトのアップロード
       - name: Upload artifact to GitHub Pages
         uses: actions/upload-pages-artifact@v1
         with:
-          name: github-pages-${{ github.run_number }}-attempt-${{ github.run_attempt }} # 再実行ごとに名前を変える
+          name: github-pages-${{ github.run_number }}-attempt-${{ github.run_attempt }} # アーティファクト名
           path: docs/
 
       # デプロイ時に特定のアーティファクト名を指定
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          artifact_name: github-pages-${{ github.run_number }}-attempt-${{ github.run_attempt }}
+          artifact_name: github-pages-${{ github.run_number }}-attempt-${{ github.run_attempt }} # アーティファクト名を一致させる
 
       - name: Commit and push changes
         run: |
@@ -65,4 +69,4 @@ jobs:
           git commit -m "Add Playwright report"
           git push
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 認証にGITHUB_TOKENを使用
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
