--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -38,10 +38,14 @@ jobs:
         # 古いアーティファクトを削除
       - name: Cleanup old artifacts
         run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           rm -rf docs/*
           git add docs/
           git commit -m "Clean old docs"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Playwright tests
         run: npx playwright test --reporter=html
