--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -42,6 +42,7 @@ jobs:
           name: github-pages # 削除したいアーティファクト名
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: always() # 常に実行されるように設定
 
       - name: Run Playwright tests
         run: npx playwright test --reporter=html
