--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -18,29 +18,37 @@ jobs:
         with:
           dotnet-version: "8.0"
 
-      # Playwrightパッケージの追加
+      # プロジェクトディレクトリに移動してPlaywrightパッケージを追加
       - name: Add Playwright package
-        run: dotnet add package Microsoft.Playwright
+        run: |
+          cd HotelPlaywrightTests  # プロジェクトのパスに移動
+          dotnet add package Microsoft.Playwright
 
-      # プロジェクトのビルド
+      # プロジェクトをビルド
       - name: Build the project
-        run: dotnet build
+        run: |
+          cd HotelPlaywrightTests  # 同様にプロジェクトのパスに移動
+          dotnet build
 
       # Playwrightブラウザのインストール
       - name: Install Playwright browsers
-        run: playwright install
+        run: |
+          cd HotelPlaywrightTests  # プロジェクトのパスに移動
+          pwsh bin/Debug/net8.0/playwright.ps1 install
 
       - name: Run Playwright tests
-        run: dotnet test --logger:html --results-directory docs/
+        run: |
+          cd HotelPlaywrightTests  # プロジェクトのパスに移動
+          dotnet test --logger:html --results-directory docs/
 
       - name: Rename report to index.html
-        run: mv docs/TestResults/*.html docs/index.html
+        run: mv HotelPlaywrightTests/docs/TestResults/*.html HotelPlaywrightTests/docs/index.html
 
       - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add docs/
+          git add HotelPlaywrightTests/docs/
           git commit -m "Add Playwright report"
           git push
         env:
