--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Playwrightテストの実行
       - name: Run Playwright tests
-        working-directory: net8.0
+        working-directory: HotelPlaywrightTests
         run: dotnet test --logger:html --results-directory docs/
 
       # テスト結果をindex.htmlにリネーム
