--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -30,6 +30,9 @@ jobs:
         working-directory: HotelPlaywrightTests
         run: pwsh bin/Debug/net8.0/playwright.ps1 install
 
+      - name: Create docs folder if not exists
+        run: mkdir -p docs # docsフォルダがない場合に作成
+
       # Playwrightテストの実行
       - name: Run Playwright tests
         working-directory: HotelPlaywrightTests
