--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -36,30 +36,24 @@ jobs:
       # Playwrightテストの実行
       - name: Run Playwright tests
         working-directory: HotelPlaywrightTests
-        run: dotnet test --logger:html --results-directory docs/
-
-        # テスト結果の場所を確認
-      - name: Run Playwright tests and check results
-        working-directory: HotelPlaywrightTests
-        run: dotnet test --logger:html --results-directory docs/ && ls -R docs/
+        run: dotnet test --logger:html --results-directory testresult/
 
       # docsディレクトリの内容を表示するステップを追加
       - name: List docs directory contents
         working-directory: HotelPlaywrightTests
-        run: ls -R docs/
+        run: ls -R testresult/
 
-      - name: 最新のレポートをindex.htmlにリネーム
+      # 最新のテスト結果ファイルをリネームして、上層のdocsディレクトリへ移動
+      - name: 最新のテスト結果ファイルをリネームして移動
+        working-directory: HotelPlaywrightTests
         run: |
-          LATEST_FILE=$(ls -t docs/TestResult__*.html | head -1)
-          mv "$LATEST_FILE" docs/index.html
+          LATEST_FILE=$(ls -t testresult/TestResult__*.html | head -1)
+          mv "$LATEST_FILE" ../docs/index.html
 
-      # テスト結果のアップロード（失敗時）
-      - name: Upload test results
-        if: failure()
-        uses: actions/upload-artifact@v3
-        with:
-          name: Test Report
-          path: HotelPlaywrightTests/docs/index.html
+      # docsディレクトリの内容をリスト表示して確認
+      - name: docsディレクトリの内容をリスト表示
+        working-directory: HotelPlaywrightTests
+        run: ls -R ../docs
 
       # 生成されたレポートをコミットしてプッシュ
       - name: Commit and push changes
