--- a/.github/workflows/test-run-report-deploy.yml
+++ b/.github/workflows/test-run-report-deploy.yml
@@ -35,6 +35,7 @@ jobs:
 
       # Playwrightテストの実行
       - name: Run Playwright tests
+        id: playwright-tests # IDを設定して後で結果を確認
         working-directory: HotelPlaywrightTests
         run: dotnet test --logger:html --results-directory testresult/
         continue-on-error: true
@@ -58,7 +59,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 最後に強制的にワークフローを失敗にする
-      - name: Force failure if tests failed
-        if: failure()
+      # 最後にテストが失敗した場合にワークフローを失敗させる
+      - name: Fail workflow if tests failed
+        if: steps.playwright-tests.outcome == 'failure' # テスト結果を確認
         run: exit 1
