--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,12 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
+
+  - repo: local
+    hooks:
+      - id: dotnet-test
+        name: Run C# Tests
+        entry: dotnet test --verbosity normal
+        language: system
+        always_run: true
+        pass_filenames: false
